# mod_auth_mellon

./: .dir-locals.el  .gitignore  .travis.yml  COPYING  Dockerfile  ECP.rst  Makefile.in  NEWS  README  README.md  TODO  auth_mellon.h  auth_mellon_cache.c  auth_mellon_compat.h  auth_mellon_config.c  auth_mellon_cookie.c  auth_mellon_diagnostics.c  auth_mellon_handler.c  auth_mellon_httpclient.c  auth_mellon_session.c  auth_mellon_util.c  configure.ac  lasso_compat.h  mellon_create_metadata.sh  mod_auth_mellon.c
debian/: auth_mellon.conf  auth_mellon.load  changelog  control  copyright  dirs  install  rules
doc/: mellon-attribute-map.xsl
doc/user_guide/: Guardfile  README  mellon_user_guide.adoc
